--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,5 +1,6 @@
 file(GLOB ONIONWORLD_SOURCES "*.cpp")
 
+include_directories(${PROJECT_BINARY_DIR})
 include_directories(${OnionWorld_SOURCE_DIR})
 
 add_executable(onionworld ${ONIONWORLD_SOURCES})
