--- a/config.h.in
+++ b/config.h.in
@@ -1,6 +1,6 @@
 #ifndef CONFIG_H
 #define CONFIG_H
 
-#cmakedefine DATADIR "@DATADIR@"
+const char* const g_datapath = "@DATADIR@";
 
 #endif//CONFIG_H
