add render on editor

--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -1,5 +1,8 @@
 file(GLOB OWEDITOR_SOURCES "*.cpp")
 
+include_directories(${PROJECT_BINARY_DIR})
+include_directories(${OnionWorld_SOURCE_DIR})
+
 include(${QT_USE_FILE})
 
 set(oweditor_MOC_HDRS
@@ -13,3 +16,4 @@ add_executable(oweditor ${OWEDITOR_SOURCES} ${oweditor_MOC_SRCS})
 install(TARGETS oweditor RUNTIME DESTINATION bin)
 
 target_link_libraries(oweditor ${QT_LIBRARIES})
+target_link_libraries(oweditor render)
