--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -14,7 +14,7 @@ qt4_wrap_cpp(oweditor_MOC_SRCS ${oweditor_MOC_HDRS})
 
 add_executable(oweditor ${OWEDITOR_SOURCES} ${oweditor_MOC_SRCS} ../gui/glwidget.cpp )
 
-target_link_libraries(oweditor render common)
+target_link_libraries(oweditor render common tinyxml2)
 target_link_libraries(oweditor ${QT_LIBRARIES})
 target_link_libraries(oweditor ${Boost_LIBRARIES})
 
