add release/debug flavours

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,21 +3,30 @@ project(OnionWorld)
 set(OnionWorld_VERSION_MAJOR 0)
 set(OnionWorld_VERSION_MINOR 1)
 
+set(BUILD_SHARED_LIBS OFF)
+
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Debug)
+endif()
+
 if(CMAKE_COMPILER_IS_GNUCXX)
-#  message("compiler detected as: GNU compiler")
   execute_process(COMMAND "${CMAKE_CXX_COMPILER}" "-dumpversion" OUTPUT_VARIABLE CXX_VERSION OUTPUT_STRIP_TRAILING_WHITESPACE)
 #  message("compiler: ${CMAKE_CXX_COMPILER}")
 #  message("version: ${CXX_VERSION}")
   if(${CXX_VERSION} VERSION_GREATER "4.6.99")
-    SET(CMAKE_CXX_FLAGS "-std=c++11" )
+    set(CMAKE_CXX_FLAGS "-Wall -std=c++11" )
+    set(CMAKE_CXX_FLAGS_DEBUG "-pedantic -g -O0 -DDEBUG" )
+    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DRELEASE" )
   else()
-    SET(CMAKE_CXX_FLAGS "-std=c++0x" )
+    set(CMAKE_CXX_FLAGS "-Wall -std=c++0x" )
+    set(CMAKE_CXX_FLAGS_DEBUG "-pedantic -g -O0 -DDEBUG" )
+    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DRELEASE" )
   endif()
 else()
 #  message("compiler detected as: non-GNU compiler")
 endif()
 
-set(CMAKE_CPP_FLAGS "-Wall -pedantic" )
+#set(CMAKE_VERBOSE_MAKEFILE on)
 
 set(DATADIR "${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}")
 
