--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,3 +51,15 @@ add_subdirectory(editor)
 # Data files
 file(GLOB DATA_DIRS "data/*")
 install(DIRECTORY ${DATA_DIRS} DESTINATION ${DATADIR})
+
+# documentation
+find_package(Doxygen)
+if(DOXYGEN_FOUND)
+  configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in" 
+    "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile" @ONLY)
+  add_custom_target(doc
+    ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMENT "Generating API documentation with Doxygen" VERBATIM
+    )
+endif()
