--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,6 @@ include_directories(${OnionWorld_SOURCE_DIR})
 foreach(testFile ${TEST_FILES})
   get_filename_component(testName ${testFile} NAME_WE)
   add_executable(${testName} ${testFile})
-  target_link_libraries(${testName} render common tinyxml2)
+  target_link_libraries(${testName} render common math tinyxml2)
   target_link_libraries(${testName} ${Boost_LIBRARIES})
 endforeach()
